--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <header>
-    Type a name and hover the cursor over
+    Type a name and hover the cursor over or click the text
   </header>
 
   <div class="art-container">
