--- a/index.html
+++ b/index.html
@@ -100,3 +100,25 @@
   </script>
 </body>
 </html>
+
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBWLjBv6VbWLbVreHk3qJJk7ZK4VT1eC20",
+  authDomain: "heartname-55ebb.firebaseapp.com",
+  projectId: "heartname-55ebb",
+  storageBucket: "heartname-55ebb.appspot.com",
+  messagingSenderId: "867722982115",
+  appId: "1:867722982115:web:821aa9ae29f38e164e0bd6",
+  measurementId: "G-M9NCRXZ06N"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
