--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -98,18 +99,15 @@
       document.getElementById('name').textContent = newName;
     }
   </script>
-</body>
-</html>
+  <!-- Firebase App (the core Firebase SDK) -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
 
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+<!-- Firebase Realtime Database -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
+<script>
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
   apiKey: "AIzaSyBWLjBv6VbWLbVreHk3qJJk7ZK4VT1eC20",
   authDomain: "heartname-55ebb.firebaseapp.com",
   projectId: "heartname-55ebb",
@@ -117,8 +115,14 @@ const firebaseConfig = {
   messagingSenderId: "867722982115",
   appId: "1:867722982115:web:821aa9ae29f38e164e0bd6",
   measurementId: "G-M9NCRXZ06N"
-};
+  };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
 const analytics = getAnalytics(app);
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+</script>
+
+</body>
+</html>
