--- a/index.html
+++ b/index.html
@@ -45,23 +45,21 @@
       text-transform: uppercase;
       cursor: pointer;
       transition: color 0.2s ease-in-out 0.1s;
-      -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: black;
     }
 
     .name:hover {
-      color: #ffffff;
+      color: #000249;
     }
 
     .name::before {
-      content: '▦';
+      content: '❤';
       font-size: 5rem;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%) scale(0);
       transform-origin: center;
-      color: #192734;
+      color: #FF4949;
       z-index: -1;
       transition: transform 0.5s ease-in-out, background-position 0.5s ease-in-out, color 0.5s ease-in-out;
     }
@@ -69,7 +67,7 @@
     .name:hover::before {
       transform: translate(-50%, -50%) scale(4);
       background-position: 0 0;
-      color: #192734;
+      color: #DD1717;
     }
 
     #inputField {
